# rag-graphiti

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.claude/: settings.local.json
src/rag_chatbot/: __init__.py  chat_handler.py  cli.py  config.py  document_processor.py  graphiti_service.py  sample_data.py  web_server.py
src/rag_chatbot/templates/: base.html  chat.html  status.html
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_document_processor.py  test_graphiti_service.py
tests/fixtures/: __init__.py  sample_data.py
