[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-chatbot"
version = "0.1.0"
description = "Production-ready RAG chatbot using Graphiti knowledge graph"
authors = [
    {name = "RAG Chatbot", email = "noreply@example.com"}
]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
dependencies = [
    "graphiti-core>=0.17.4",
    "click>=8.1.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "rich>=13.0.0",
    "httpx>=0.24.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]
falkordb = ["graphiti-core[falkordb]"]
anthropic = ["graphiti-core[anthropic]"]
openai = ["graphiti-core[openai]"]
google = ["graphiti-core[google-genai]"]
all = ["graphiti-core[falkordb,anthropic,openai,google-genai]"]

[project.scripts]
rag-chatbot = "rag_chatbot.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
target-version = "py39"
line-length = 100
select = ["E", "F", "UP", "B", "SIM", "I"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true